# AndroidCMake

./: README.md  default_build.gradle  native_build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/peerless2012/cmake/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/peerless2012/cmake/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/peerless2012/cmake/: ExampleUnitTest.java
contrib/FFmpeg/: CMakeLists.txt
contrib/FFmpeg/include/: FFmpeg.h
contrib/FFmpeg/src/: FFmpeg.cpp
contrib/OpenSSL/: CMakeLists.txt
contrib/OpenSSL/include/: OpenSSL.h
contrib/OpenSSL/src/: OpenSSL.cpp
gradle/wrapper/: gradle-wrapper.properties
lib_contrib/: README.md
lib_contrib/src/androidTest/java/com/peerless2012/lib_player/: ExampleInstrumentedTest.java
lib_contrib/src/main/: AndroidManifest.xml
lib_contrib/src/main/cpp/: CMakeLists.txt
lib_contrib/src/main/cpp/include/: Contrib.h
lib_contrib/src/main/cpp/src/: Contrib.cpp
lib_contrib/src/main/java/com/peerless2012/cmake/contrib/: Contrib.java
lib_contrib/src/test/java/com/peerless2012/lib_player/: ExampleUnitTest.java
lib_fetch_content/: README.md  build.gradle
lib_fetch_content/src/androidTest/java/com/peerless2012/cmake/fc/: ExampleInstrumentedTest.java
lib_fetch_content/src/main/: AndroidManifest.xml
lib_fetch_content/src/main/cpp/: CMakeLists.txt
lib_fetch_content/src/test/java/com/peerless2012/cmake/fc/: ExampleUnitTest.java
lib_makefile/: README.md
lib_makefile/src/androidTest/java/com/peerless2012/cmake/msys/: ExampleInstrumentedTest.java
lib_makefile/src/main/: AndroidManifest.xml
lib_makefile/src/main/cpp/: CMakeLists.txt
lib_makefile/src/main/cpp/demo/: CMakeLists.txt
lib_makefile/src/main/cpp/demo/include/: MakefileDemo.h
lib_makefile/src/main/cpp/demo/src/: MakefileDemo.cpp
lib_makefile/src/main/cpp/makefile/: CMakeLists.txt  MakeFile.cpp  MakeFile.h  Makefile  Makefile.cpp  Makefile.h  configure
lib_makefile/src/main/java/com/peerless2012/cmake/makefile/: Makefile.java
lib_makefile/src/test/java/com/peerless2012/cmake/msys/: ExampleUnitTest.java
lib_project/: README.md
lib_project/src/androidTest/java/com/peerless2012/cmake/project/: ExampleInstrumentedTest.java
lib_project/src/main/: AndroidManifest.xml
lib_project/src/main/cpp/: CMakeLists.txt
lib_project/src/main/cpp/include/: Outter.h
lib_project/src/main/cpp/inner/: CMakeLists.txt
lib_project/src/main/cpp/inner/cmake/: android.toolchain.ext.cmake
lib_project/src/main/cpp/inner/include/: Inner.h
lib_project/src/main/cpp/inner/src/: Inner.cpp
lib_project/src/main/cpp/src/: Outter.cpp
lib_project/src/main/java/com/peerless2012/cmake/project/: Project.java
lib_project/src/test/java/com/peerless2012/cmake/project/: ExampleUnitTest.java
